kyleandemily/wedding/static/wedding/css/wedding.css
#imageHeader {
  background: url('../img/header.jpg') no-repeat center center local; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#textHeader {
    font-family: "Tangerine",Arial, Helvetica, sans-serif;
    color: #aaa;
}

#textHeader h1 {
    font-size: 5em;
    margin: 0px 0px;
}

#theDate {
    font-size: 4em;
}

.personSection {
	padding: 5px;
}

.personDescription {
	padding-left: 15px;
}

.galleryImage {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    clear: right;
}

.galleryImage img {
    max-width: 40%;
}

.left{
	float: left;
}

.right{
	float: right;
}

.center {
    display: table;
    margin: 0 auto;
}

